# UTBot

./: .gitignore  README.md  pyproject.toml
LiveData/: README.md  index.direct.html  index.html  live_kcex_chart.py
backtesting/: BW_STRATEGY_README.md  __init__.py  batch.py  data.py  engine.py  fractals.py  live_execution.py  local_chart.py  monte_carlo.py  quality.py  report.py  resample.py  stats.py  strategy.py  trade_metrics.py  tradingview.py
docs/: wiseman-trade-state-machine.md
examples/: NVDA4h.csv  SPX5004h.csv  convert_binance_to_tradingview_csv.py  run_backtest.py  run_batch_backtest.py  run_indicator_dry_run.py  run_monte_carlo.py  run_paper_trading.py  run_rolling_timeframe_sweep.py  run_wiseman_parameter_sweep.py  sample_ohlcv.csv  scrape_binance_ohlcv.py
tests/: test_data.py  test_engine.py  test_intrabar_fills.py  test_intrabar_signal_timeframe.py  test_live_data_chart.py  test_live_execution.py  test_local_chart.py  test_monte_carlo.py  test_paper_trading_cli.py  test_position_sizing.py  test_report.py  test_report_cli_flags_page.py  test_run_backtest_chart_timeframe.py  test_run_backtest_cli.py  test_stats.py  test_sweep_cli.py  test_ut_bot_strategy.py
